Fix nav-items alignment

--- a/assets/stylesheets/plg-material.css
+++ b/assets/stylesheets/plg-material.css
@@ -290,7 +290,7 @@
   color: var(--plg-typeset-search-color);
 }
 /* Navigation tabs styling */
-.md-nav--primary .md-nav__list {
+.md-nav--primary > .md-nav__list {
   padding-left: 0 !important;
 }
 .md-tabs {
